--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eunjoung-lint-fix": "eslint --ext .js,.html ChoiEunjoung/ --fix",
     "ys-lint": "eslint --ext .js,.html ys/",
     "ys-lint-fix": "eslint --ext .js,.html ys/ --fix"
+    "daehyun-lint": "eslint --ext .js,.html AhnDaehyun/",
+    "daehyun-lint-fix": "eslint --ext .js,.html AhnDaehyun/ --fix"
   },
   "repository": {
     "type": "git",
